--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -5,22 +5,22 @@ Stylesheet: 600px以上のタブレットやモニタで適用
 // ******************************************************************/
 .font-sm {
     font-size: 12px;
-  }
-  .font-md {
-    font-size: 16px;
-  }
-  .font-lr {
-    font-size: 17px;
-  }
-  .font-lg {
-    font-size: 28px;
-  }
-  .mb-lg {
-    margin-bottom: 150px !important;
-  }
-  .pb-lg {
-    padding-bottom: 150px !important;
-  }
+}
+.font-md {
+  font-size: 16px;
+}
+.font-lr {
+  font-size: 17px;
+}
+.font-lg {
+  font-size: 28px;
+}
+.mb-lg {
+  margin-bottom: 150px !important;
+}
+.pb-lg {
+  padding-bottom: 150px !important;
+}
 
 .main-visual {
         &::after {
@@ -44,31 +44,34 @@ Stylesheet: 600px以上のタブレットやモニタで適用
         }
     }
     
+    .gate-animation-section {
+      margin-bottom: 2000px;
+    }
 
-  .profile {
-    &__left {
-        & .profile-icon {
-          top: 180px;
-          left: 20%;
-          width: 370px;
-          height: 300px;
-        }
-    }
-    &__right {
-        &__profile-wrapper {
-            & .profile-en-name {
-                margin: 7px 5% 0 auto;
-            }
-            & .profile-my-background {
-                top: 2%;
-                right: 10px;
-            }
-            & .profile-intro {
-                margin: 3% 15% 0 5%;
-            }
-        }
-    }
+.profile {
+  &__left {
+      & .profile-icon {
+        top: 180px;
+        left: 20%;
+        width: 370px;
+        height: 300px;
+      }
   }
+  &__right {
+      &__profile-wrapper {
+          & .profile-en-name {
+              margin: 7px 5% 0 auto;
+          }
+          & .profile-my-background {
+              top: 2%;
+              right: 12px;
+          }
+          & .profile-intro {
+              margin: 3% 15% 0 5%;
+          }
+      }
+  }
+}
 
 .skills {
     &__skills-wrapper {
