--- a/styles/loader.css
+++ b/styles/loader.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .pace-done #global-container {
   -webkit-transition: opacity 1.5s;
   transition: opacity 1.5s;
@@ -14,41 +15,35 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background-clip: padding-box;
   z-index: 2000;
   position: fixed;
   margin: auto;
-  top: 40%;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 50px;
+  height: 100vh;
+  background: #000;
   overflow: hidden;
 }
 
-.pace .pace-progress {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background-clip: padding-box;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+.pace::after {
+  content: "K•T";
   display: block;
   position: absolute;
-  right: 100%;
-  width: 100%;
-  top: 0;
-  height: 5px;
-  background: #000;
-}
-
-.pace .pace-activity {
-  position: absolute;
-  width: 100%;
-  height: 28px;
-  z-index: 2001;
+  top: 50%;
+  left: 50%;
+  font-size: 8vh;
+  width: px;
+  /* height: 200px; */
+  color: red;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-orientation: upright;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .pace.pace-inactive {
