--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -10,41 +10,32 @@
 .pace {
   pointer-events: none;
   user-select: none;
-  box-sizing: border-box;
-  background-clip: padding-box;
 
   z-index: 2000;
   position: fixed;
   margin: auto;
-  top: 40%;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 50px;
-  overflow: hidden;
-}
-
-.pace .pace-progress {
-  box-sizing: border-box;
-  background-clip: padding-box;
-  transform: translate3d(0, 0, 0);
-
-  display: block;
-  position: absolute;
-  right: 100%;
-  width: 100%;
-  top: 0;
-  height: 5px;
+  height: 100vh;
   background: #000;
-}
-
-
-.pace .pace-activity {
-  position: absolute;
-  width: 100%;
-  height: 28px;
-  z-index: 2001;
+  overflow: hidden;
+  &::after {
+    content: "K•T";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 8vh;
+    width: px;
+    /* height: 200px; */
+    color: red;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .pace.pace-inactive {
