--- a/styles/modules/_swiper.scss
+++ b/styles/modules/_swiper.scss
@@ -1,69 +1,60 @@
-.swiper-container {
-    position: relative;
-    width: 100%;
-    margin: 0;
-    // border: grey solid;
-   
-}
-
-// .swiper-wrapper {
+// .swiper-container {
+//     position: relative;
+//     width: 100%;
+//     margin: 0;
 // }
 
-.swiper-slide {
-    // overflow: hidden;
-    width: 100%;
-    & > img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+// .swiper-slide {
+//     // overflow: hidden;
+//     width: 100%;
+//     & > img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
         
-        // transform: scale(1.3);
-        // transition: transform .9s ease;
-    }
+//         // transform: scale(1.3);
+//         // transition: transform .9s ease;
+//     }
 
     // &-active {
     //     & > img {
     //         transform: none;
     //     }
     // }
-}
+// }
 
-.swiper-pagination-bullets {
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    // display: none;
-    height: 80px;
-    overflow: scroll;
-    white-space: nowrap;
-    // @media screen and (min-width:960px) {
-        // display: flex;
-        // flex-direction: column;
-    // }
-    & .swiper-pagination-bullet {
-        display: inline-block;
-        width: 20%;
-        height: 100%;
-        margin: 8px 4px;
-        & > img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-}
-
-
-
-
-.work-title {
-    position: absolute;
-    left: 10px;
-    bottom: 8px;
-    text-align: left;
-    color: white;
-    font-size: 0.95em;
-    text-shadow: 2px 3px 0 #333;
-    font-family: 'Krona One', ;
-    z-index: 10;
-}
+// .swiper-pagination-bullets {
+//     // display: flex;
+//     // flex-direction: row;
+//     // justify-content: space-between;
+//     // display: none;
+//     height: 80px;
+//     overflow: scroll;
+//     white-space: nowrap;
+//     // @media screen and (min-width:960px) {
+//         // display: flex;
+//         // flex-direction: column;
+//     // }
+//     & .swiper-pagination-bullet {
+//         display: inline-block;
+//         width: 20%;
+//         height: 100%;
+//         margin: 8px 4px;
+//         & > img {
+//             width: 100%;
+//             height: 100%;
+//             object-fit: cover;
+//         }
+//     }
+// }
+// .work-title {
+//     position: absolute;
+//     left: 10px;
+//     bottom: 8px;
+//     text-align: left;
+//     color: white;
+//     font-size: 0.95em;
+//     text-shadow: 2px 3px 0 #333;
+//     font-family: 'Krona One', ;
+//     z-index: 10;
+// }
