--- a/styles/style.css
+++ b/styles/style.css
@@ -1,53 +1,4 @@
 @charset "UTF-8";
-.swiper-container {
-  position: relative;
-  width: 100%;
-  margin: 0;
-}
-
-.swiper-slide {
-  width: 100%;
-}
-
-.swiper-slide > img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.swiper-pagination-bullets {
-  height: 80px;
-  overflow: scroll;
-  white-space: nowrap;
-}
-
-.swiper-pagination-bullets .swiper-pagination-bullet {
-  display: inline-block;
-  width: 20%;
-  height: 100%;
-  margin: 8px 4px;
-}
-
-.swiper-pagination-bullets .swiper-pagination-bullet > img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.work-title {
-  position: absolute;
-  left: 10px;
-  bottom: 8px;
-  text-align: left;
-  color: white;
-  font-size: 0.95em;
-  text-shadow: 2px 3px 0 #333;
-  font-family: "Krona One";
-  z-index: 10;
-}
-
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -73,15 +24,15 @@ a {
   font-size: 11px;
 }
 
-.font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+.font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
   font-size: 14px;
 }
 
-.font-lr {
+.font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
   font-size: 17px;
 }
 
-.font-lg, .profile__right__profile-wrapper .profile-name {
+.font-lg, .my-words-wrapper .my-words-inner .my-words-top, .my-words-wrapper .my-words-inner .my-words-bottom, .profile__right__profile-wrapper .profile-name {
   font-size: 25px;
 }
 
@@ -115,22 +66,31 @@ a {
   opacity: 1;
 }
 
-.jsFadeInUp, .jsFadeInOutUp {
+.jsFadeInUp, .jsFadeInUpDelay, .jsFadeInOutUp {
   opacity: 0;
   -webkit-transform: translateY(50px);
           transform: translateY(50px);
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: .8s;
+  transition: .8s;
   -webkit-transition-property: opacity transform;
   transition-property: opacity transform;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
 
-.jsFadeInUp.scrolled, .scrolled.jsFadeInOutUp {
+.jsFadeInUp.scrolled, .scrolled.jsFadeInUpDelay, .scrolled.jsFadeInOutUp {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+
+.pin-target {
+  position: absolute;
+  top: 551px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
 }
 
 .nav {
@@ -233,22 +193,16 @@ a {
   background-color: #f00;
 }
 
-.sections-container {
-  position: relative;
-  width: 100%;
-  background: linear-gradient(198deg, white 0%, #f4f4f4 100%);
-}
-
 .bgSpan::after {
   content: "";
   position: absolute;
-  top: -50%;
-  left: -500%;
-  width: 800px;
-  height: .5px;
-  -webkit-transform: translateY(-50%) rotate(45deg) skewX(87deg) scaleY(0.2);
-          transform: translateY(-50%) rotate(45deg) skewX(87deg) scaleY(0.2);
+  width: .5px;
+  height: 800px;
+  -webkit-transform: rotate(-45deg) skewY(87deg) scaleX(0.2);
+          transform: rotate(-45deg) skewY(87deg) scaleX(0.2);
   background: #000;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .bgSpan.cChanged {
@@ -382,6 +336,12 @@ a {
   background-color: #736457;
 }
 
+.sections-container {
+  position: relative;
+  width: 100%;
+  background: linear-gradient(48deg, #fff 0%, #eaeaea 100%);
+}
+
 .main-visual-section {
   position: relative;
   z-index: 2;
@@ -393,6 +353,7 @@ a {
   height: 551px;
   background: url("/images/main-visual-img.jpg") no-repeat center;
   background-size: cover;
+  pointer-events: none;
   z-index: 3;
 }
 
@@ -503,14 +464,18 @@ a {
   height: 70px;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-.gate-animation {
+.gate-animation-section {
   position: relative;
-  z-index: 1;
+  z-index: 5;
+  margin-bottom: 2300px;
 }
 
 .gateAnimation {
+  visibility: hidden;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -524,6 +489,7 @@ a {
 }
 
 .gateAnimation .gateWrapper {
+  visibility: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -532,6 +498,7 @@ a {
 }
 
 .gateAnimation .gateWrapper .gateLeft {
+  visibility: visible;
   width: 50%;
   background: #000;
   -webkit-box-shadow: 10px 50px 100px #000;
@@ -541,10 +508,62 @@ a {
 }
 
 .gateAnimation .gateWrapper .gateRight {
+  visibility: visible;
   width: 50%;
   background: #fff;
   -webkit-box-shadow: -20px 20px 100px #000;
           box-shadow: -20px 20px 100px #000;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.my-words-wrapper {
+  position: absolute;
+  top: 800px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.my-words-wrapper .my-words-inner {
+  width: 80vw;
+  color: #000;
+  font-family: "Hannari";
+}
+
+.my-words-wrapper .my-words-inner .my-words-top {
+  line-height: 40px;
+  -webkit-transition: 1s !important;
+  transition: 1s !important;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.my-words-wrapper .my-words-inner .my-words-mid {
+  margin-top: 180px;
+  line-height: 45px;
+  -webkit-transition: 1s !important;
+  transition: 1s !important;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.my-words-wrapper .my-words-inner .my-words-bottom {
+  margin-top: 250px;
+  line-height: 40px;
+  -webkit-transition: 1s !important;
+  transition: 1s !important;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
@@ -624,7 +643,7 @@ a {
   position: absolute;
   top: -1%;
   right: 2%;
-  margin: 140px 5% 0 5%;
+  margin: 140px 6% 0 5%;
   line-height: 25px;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
@@ -633,19 +652,19 @@ a {
 
 .profile__right__profile-wrapper .profile-intro {
   position: absolute;
-  bottom: 5%;
-  margin: 3% 15% 0 5%;
+  bottom: 0;
+  margin: 0 15% 0 5%;
   font-family: 'Karla', 'Source Sans Pro','NotoSansCJKjp', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
 }
 
 .about-section {
   position: relative;
   z-index: 2;
-  padding-bottom: 200px;
   color: #000;
+  margin-top: 300px;
 }
 
-.about-section .about {
+.about {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -653,42 +672,23 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 400vh;
-  margin-top: 100px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.about-section .about__about-header {
-  position: -webkit-sticky;
-  position: sticky;
+.about__about-header {
+  position: absolute;
   top: 100px;
-  margin: 30px auto 200px auto;
   border-bottom: ridge #000;
   letter-spacing: 12px;
   z-index: 2;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-.about-section .about__about-body {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
-
-.about-section .about__about-1, .about-section .about__about-2, .about-section .about__about-3 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+.about__about-1, .about__about-2, .about__about-3 {
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -701,14 +701,12 @@ a {
           align-items: center;
 }
 
-.about-section .about__about-1__left, .about-section .about__about-2__left, .about-section .about__about-3__left {
+.about__about-1__top, .about__about-2__top, .about__about-3__top {
   width: 100%;
-  height: 350px;
 }
 
-.about-section .about__about-1__right, .about-section .about__about-2__right, .about-section .about__about-3__right {
-  width: 90%;
-  height: 350px;
+.about__about-1__bottom, .about__about-2__bottom, .about__about-3__bottom {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -850,13 +848,13 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .font-sm, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     font-size: 12px;
   }
-  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
     font-size: 16px;
   }
-  .font-lr {
+  .font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
     font-size: 17px;
   }
-  .font-lg, .profile__right__profile-wrapper .profile-name {
+  .font-lg, .my-words-wrapper .my-words-inner .my-words-top, .my-words-wrapper .my-words-inner .my-words-bottom, .profile__right__profile-wrapper .profile-name {
     font-size: 28px;
   }
   .mb-lg {
@@ -885,6 +883,9 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     font-size: 60px;
     letter-spacing: 3px;
   }
+  .gate-animation-section {
+    margin-bottom: 2000px;
+  }
   .profile__left .profile-icon {
     top: 180px;
     left: 20%;
@@ -896,7 +897,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   }
   .profile__right__profile-wrapper .profile-my-background {
     top: 2%;
-    right: 10px;
+    right: 12px;
   }
   .profile__right__profile-wrapper .profile-intro {
     margin: 3% 15% 0 5%;
@@ -918,13 +919,13 @@ Stylesheet: 960px以上のモニタで適用
   .font-sm, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     font-size: 13px;
   }
-  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
     font-size: 18px;
   }
-  .font-lr {
+  .font-lr, .my-words-wrapper .my-words-inner .my-words-mid {
     font-size: 23px;
   }
-  .font-lg, .profile__right__profile-wrapper .profile-name {
+  .font-lg, .my-words-wrapper .my-words-inner .my-words-top, .my-words-wrapper .my-words-inner .my-words-bottom, .profile__right__profile-wrapper .profile-name {
     font-size: 28px;
   }
   .line-h-sm, .profile__right__profile-wrapper .profile-intro {
@@ -938,6 +939,9 @@ Stylesheet: 960px以上のモニタで適用
   }
   .line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     line-height: 26px;
+  }
+  .h-fade-in {
+    padding: 66px 0;
   }
   .main-visual::after {
     top: 520px;
@@ -959,16 +963,8 @@ Stylesheet: 960px以上のモニタで適用
     font-size: 80px;
     letter-spacing: 7px;
   }
-  .global-bg-container__bg-left-1 {
-    margin-top: 1000px;
-    height: 400px;
-  }
-  .global-bg-container__bg-right-1 {
-    margin-top: 1800px;
-    height: 400px;
-  }
-  .h-fade-in {
-    padding: 66px 0;
+  .gate-animation-section {
+    margin-bottom: 1800px;
   }
   .profile__left .profile-icon {
     top: 150px;
@@ -984,7 +980,7 @@ Stylesheet: 960px以上のモニタで適用
   }
   .profile__right__profile-wrapper .profile-my-background {
     top: 2%;
-    right: -1%;
+    right: -.6%;
   }
   .profile__right__profile-wrapper .profile-intro {
     margin: 3% 15% 0 35%;
